# hmp

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/hmp/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
