[tool.poetry]
name = "hmp"
version = "0.1.0"
description = "My project based upon hypermodern-python tutorial."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/funkwad/hmp"
repository = "https://github.com/funkwad/hmp"
authors = ["Hypermodern Python <hmp-example@beers.org>"]
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"

[tool.poetry.scripts]
hmp = "hmp.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hmp"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

